# celline

./: .gitignore  .prettierignore  .proc_data.toml  LICENSE  MANIFEST.in  Makefile  README.md  TEST.tsv  compile.sh  dumped_filename.txt  install.sh  mypy.ini  pyenv.yaml  pyenv.yaml.bk  pyproject.toml  r.test.ipynb  renv.yaml  server_connection.toml  setup.py
__obsoletev2/api/: main.py
celline/: __main__.py  config.py  database.py  interfaces.py  receiver.py
celline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
celline/DB/: GSE.parquet  GSM.parquet
celline/api/: main.py
celline/controllers/: add.py  argument.py  controller.py  dump.py
celline/data/: files.py  ggplot.py  html.py  ncbi.py  seurat.py
celline/functions/: __init__.py  _base.py  add.py  count.py  create_seurat.py  download.py  dump.py  integrate.py  interactive.py  predict_celltype.py  preprocess.py  reduce.py  set_transcriptome.py  sync_DB.py
celline/initializer/: initialize.py
celline/jobs/: jobs.py
celline/middleware/: biosample.py  shell.py  threading.py
celline/ncbi/: resolver.py  srr.py
celline/resources/: manager.py
celline/sample/: __init__.py  sample_handler.py
celline/template/: manager.py
celline/tests/: test.py
celline/utils/: config.py  (+5 more)
cellpline/: __main__.py  receiver.py
docs/: __help.txt  __help.yaml
frontend/: .gitignore  package-lock.json  package.json
notebooks/: directory.ipynb
templates/: count.sh  download.sh
test/: runs.tsv  setting.toml  testdata.tsv
tmp/: data.toml
tools/: install.py  install.sh  multi_selection.sh  test.txt
(+51 files in other folders)
